plugins {
	id "org.springframework.boot" version "2.4.3"
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
	compile 'org.springframework.boot:spring-boot-starter-data-redis'
	compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
	compile 'org.springframework.boot:spring-boot-starter-web'

	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'

	compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.41.0'
	compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.3.6'

	compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
	compile group: 'commons-io', name: 'commons-io', version: '2.6'
	compile('org.springframework.data:spring-data-commons')

	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
	compile group: 'org.json', name: 'json', version: '20200518'
	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.2'

	compile group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '1.2.0.RELEASE'
	compile(group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2') {
		exclude module: 'swagger-annotations' exclude module: 'swagger-models'
	}
	compile("io.swagger:swagger-annotations:1.5.21")
	compile("io.swagger:swagger-models:1.5.21")
	compile(group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2')

	compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.6.0'
	runtimeOnly 'com.h2database:h2'

	compileOnly 'org.projectlombok:lombok'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'net.rakugakibox.util:yaml-resource-bundle:1.1'

	implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '2.4.3'

	implementation 'org.springframework.boot:spring-boot-starter-cache'


	compile("com.querydsl:querydsl-core")
	compile("com.querydsl:querydsl-jpa")

	annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa") // querydsl JPAAnnotationProcessor 사용 지정
	annotationProcessor("jakarta.persistence:jakarta.persistence-api") // java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
	annotationProcessor("jakarta.annotation:jakarta.annotation-api") // java.lang.NoClassDefFoundError (javax.annotation.Generated) 발생 대응
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
}
